--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-animate-gradient",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Animate gradient colors.",
   "main": "lib/index.js",
   "scripts": {
@@ -20,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/IonicaBizau/jQuery-animate-gradient/issues"
   },
-  "homepage": "https://github.com/IonicaBizau/jQuery-animate-gradient#readme"
+  "homepage": "https://github.com/IonicaBizau/jQuery-animate-gradient#readme",
+  "files": [
+    "bin/",
+    "app/",
+    "lib/",
+    "dist/",
+    "src/",
+    "resources/",
+    "menu/",
+    "cli.js",
+    "index.js"
+  ]
 }
