--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-animate-gradient",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Animate gradient colors.",
   "main": "lib/index.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "src/",
     "resources/",
     "menu/",
+    "scripts/",
     "cli.js",
     "index.js"
   ]
