--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-animate-gradient",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Animate gradient colors.",
   "main": "lib/index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "bin/",
     "app/",
     "lib/",
+    "build/",
     "dist/",
     "src/",
     "resources/",
