:arrow_up: 1.1.6 :tada:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-animate-gradient",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Animate gradient colors.",
   "main": "lib/index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "color",
     "animation"
   ],
-  "author": "Ionică Bizău <bizauionica@gmail.com> (http://ionicabizau.net)",
+  "author": "Ionică Bizău <bizauionica@gmail.com> (https://ionicabizau.net)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/IonicaBizau/jQuery-animate-gradient/issues"
@@ -25,12 +25,11 @@
     "bin/",
     "app/",
     "lib/",
-    "build/",
     "dist/",
     "src/",
+    "scripts/",
     "resources/",
     "menu/",
-    "scripts/",
     "cli.js",
     "index.js"
   ]
