--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-animate-gradient",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Animate gradient colors.",
   "main": "lib/index.js",
   "scripts": {
@@ -31,6 +31,9 @@
     "resources/",
     "menu/",
     "cli.js",
-    "index.js"
+    "index.js",
+    "bloggify.js",
+    "bloggify.json",
+    "bloggify/"
   ]
 }
