--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-animate-gradient",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "description": "Animate gradient colors.",
   "main": "lib/index.js",
   "scripts": {
@@ -32,6 +32,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
